<?xml version="1.0"?>
<package>
  <name>haros_catkin</name>
  <version>2.1.2</version>
  <description>
    Catkin integration for HAROS
  </description>
  <license>MIT</license>
  <author>Jonathan Hechtbauer</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>

  <url type="repository">https://github.com/rosin-project/haros_catkin.git</url>
  <url type="bugtracker">https://github.com/rosin-project/haros_catkin/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_virtualenv</build_depend>

  <run_depend>cccc</run_depend>
  <run_depend>cppcheck</run_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
