<?xml version="1.0"?>
<package format="2">
  <name>haros_catkin</name>
  <version>2.1.2</version>
  <description>
    Catkin integration for HAROS
  </description>
  <license>MIT</license>
  <author>Jonathan Hechtbauer</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>

  <url type="repository">https://github.com/rosin-project/haros_catkin.git</url>
  <url type="bugtracker">https://github.com/rosin-project/haros_catkin/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_virtualenv</build_depend>

  <exec_depend>cccc</exec_depend>
  <exec_depend>cppcheck</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
